# fukuoka-nomad-connect

./: README.md  icons.md  tasks.md
fukuoka-nomad-connect/: .eslintrc.js  CONTRIBUTING.md  README-NFT-MINTING.md  README.md  deploy.sh  next.config.ts  package-lock.json  package.json  tailwind.config.js
fukuoka-nomad-connect/docs/: developer.md  user-guide.md
fukuoka-nomad-connect/src/app/: globals.css  layout.tsx  page.tsx
fukuoka-nomad-connect/src/app/dashboard/: page.tsx
fukuoka-nomad-connect/src/app/features/community-fund/: page.tsx
fukuoka-nomad-connect/src/app/features/local-value/: page.tsx
fukuoka-nomad-connect/src/app/features/skills-hub/: page.tsx
fukuoka-nomad-connect/src/app/get-pass/: page.tsx
fukuoka-nomad-connect/src/app/why-solana/: page.tsx
fukuoka-nomad-connect/src/components/homepage/: CallToActionSection.tsx  FeatureCard.tsx  FeaturesOverviewSection.tsx  HeroSection.tsx
fukuoka-nomad-connect/src/components/layout/: Footer.module.css  Footer.tsx  Header.module.css  Header.tsx
fukuoka-nomad-connect/src/components/ui/: ConnectWalletButton.module.css  ConnectWalletButton.tsx  MintingStatus.tsx
fukuoka-nomad-connect/src/context/: WalletContextProvider.tsx
fukuoka-nomad-connect/src/idl/: fukuoka_nomad_program.json
fukuoka-nomad-connect/src/utils/: anchorUtils.ts
fukuoka-smartcontract/: Anchor.toml  README.md
fukuoka-smartcontract/programs/fukuoka-smartcontract/: Cargo.toml
fukuoka-smartcontract/programs/fukuoka-smartcontract/src/: lib.rs
fukuoka-smartcontract/tests/: fukuoka-smartcontract.ts
